--- a/package.json
+++ b/package.json
@@ -14,16 +14,28 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^12.1.4",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.4",
+    "@semantic-release/npm": "^12.0.2",
     "@types/node": "^24.2.1",
     "rollup": "^4.46.2",
+    "rollup-plugin-copy": "^3.5.0",
+    "semantic-release": "^24.2.7",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
     "vite": "^6.0.0"
+  },
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
