--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
-    "vite": "^6.0.0"
+    "vite": ">=6"
   },
   "files": [
     "dist"
